--- a/Github Application Updater/MainWindow.xaml
+++ b/Github Application Updater/MainWindow.xaml
@@ -5,29 +5,43 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Github_Application_Updater"
         mc:Ignorable="d"
-        Title="MainWindow" Height="650" Width="1000" WindowStartupLocation="CenterScreen">
+        Title="Github Application Updater" Height="650" Width="1000" WindowStartupLocation="CenterScreen" WindowStyle="None" ResizeMode="NoResize" Deactivated="Window_Deactivated" Activated="Window_Activated">
     <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="200px" MinWidth="150px" MaxWidth="300px"/>
-            <ColumnDefinition Width="*" MinWidth="200px"/>
-        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="30"/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
 
-        <GridSplitter Panel.ZIndex="1" Grid.Column="1" Grid.RowSpan="100" HorizontalAlignment="Left" VerticalAlignment="Stretch" Background="Black" Width="3" SizeChanged="GridSplitter_SizeChanged"/>
+        <Grid Background="#FF2D2D30" Grid.Row="0" MouseDown="DragWindow">
+            <TextBlock x:Name="CloseButton" Text="×" FontSize="25" FontWeight="Light" TextAlignment="Center" Margin="0, -4.5" Foreground="White" HorizontalAlignment="Right" Width="30" Background="Transparent" MouseDown="CloseWindow" ToolTip="Close" MouseEnter="CloseButton_MouseEnter" MouseLeave="CloseButton_MouseLeave"/>
+            <TextBlock x:Name="MaxRestButton" FontFamily="Marlett" Text="1" FontSize="15" TextAlignment="Center" Margin="0,0,30,0" Padding="0,7" Foreground="White" HorizontalAlignment="Right" Width="30" Background="Transparent" MouseDown="MaxRestWindow" ToolTip="Maximise" MouseEnter="MaxRestButton_MouseEnter" MouseLeave="MaxRestButton_MouseLeave"/>
+            <TextBlock x:Name="MinButton" FontFamily="Marlett" Text="0" FontSize="15" TextAlignment="Center" Margin="0,0,60,0" Padding="0,7" Foreground="White" HorizontalAlignment="Right" Width="30" Background="Transparent" MouseDown="MinWindow" ToolTip="Minimise" MouseEnter="MinButton_MouseEnter" MouseLeave="MinButton_MouseLeave"/>
+            <Image x:Name="AppImage" HorizontalAlignment="Left" Height="30" Width="30"/>
+            <TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="{Binding Title, RelativeSource={RelativeSource FindAncestor,AncestorType=Window}}" Foreground="DarkGray" Margin="35,0,0,0" Padding="0, 6"/>
+        </Grid>
 
-        <!--Selector-->
-        <Grid Grid.Column="0">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="40px"/>
-                <RowDefinition Height="40px"/>
-                <RowDefinition/>
-            </Grid.RowDefinitions>
+        <Grid Background="White" Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="200px" MinWidth="150px" MaxWidth="300px"/>
+                <ColumnDefinition Width="*" MinWidth="200px"/>
+            </Grid.ColumnDefinitions>
 
-            <!--Add-->
-            <Grid Grid.Row="0">
-                <TextBlock x:Name="Add" Background="{x:Null}" HorizontalAlignment="Left" Width="30" Height="15" Margin="10,20,0,5" Foreground="Black" MouseEnter="Add_MouseEnter" MouseLeave="Add_MouseLeave" MouseDown="Add_MouseDown">
+            <GridSplitter Panel.ZIndex="1" Grid.Column="1" Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Stretch" Background="#FF2D2D30" Width="3"/>
+
+            <!--Selector-->
+            <Grid Grid.Column="0">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="40px"/>
+                    <RowDefinition Height="40px"/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
+
+                <!--Add-->
+                <Grid Grid.Row="0" Background="#FF2D2D30" MouseDown="DragWindow">
+                    <TextBlock x:Name="Add" Background="{x:Null}" HorizontalAlignment="Left" Width="30" Height="15" Margin="10,20,0,5" Foreground="White" MouseEnter="Add_MouseEnter" MouseLeave="Add_MouseLeave" MouseDown="Add_MouseDown">
                     <StackPanel Orientation="Horizontal" Width="30">
                         <Viewbox>
-                            <Path x:Name="AddPlus"  Fill="#000000">
+                            <Path x:Name="AddPlus"  Fill="#FFFFFF">
                                 <Path.Data>
                                     <PathGeometry Figures="M24 10h-10v-10h-4v10h-10v4h10v10h4v-10h10z" FillRule="NonZero"/>
                                 </Path.Data>
@@ -36,40 +50,54 @@
                         <TextBlock Text="6" FontFamily="Marlett" FontSize="15"/>
                     </StackPanel>
                 </TextBlock>
+                </Grid>
+
+                <!--Filter-->
+                <Grid Grid.Row="1">
+                    <TextBox x:Name="Search" Margin="10,10,30,10" Text="Filter Applications" Foreground="#FF999999" GotFocus="SearchRemoveText" GotKeyboardFocus="SearchRemoveText" LostFocus="SearchAddText" LostKeyboardFocus="SearchAddText" KeyDown="Search_X" KeyUp="Search_X" MaxLines="1" BorderThickness="1,1,0,1" MouseEnter="Search_X" MouseLeave="Search_X"/>
+                    <Button x:Name="ClearSearch" Height="20" Width="20" Margin="0,10,10,10" Background="White" BorderBrush="#FFABADB3" FontFamily="Marlett" Content="" BorderThickness="0,1,1,1" Click="ClearSearch_Click" HorizontalAlignment="Right"/>
+                </Grid>
+
+                <!--Applications-->
+                <Grid Grid.Row="2">
+                    <ListBox HorizontalAlignment="Left" Height="539" VerticalAlignment="Top" Width="200" BorderThickness="0" Background="#00000000">
+                        <ListBoxItem BorderThickness="0" Height="30" FontSize="20" Padding="10, 0">Uno</ListBoxItem>
+                        <ListBoxItem BorderThickness="0" Height="30" FontSize="20" Padding="10, 0">Dux</ListBoxItem>
+                        <ListBoxItem BorderThickness="0" Height="30" FontSize="20" Padding="10, 0">Tri</ListBoxItem>
+                    </ListBox>
+
+                </Grid>
             </Grid>
 
-            <!--Filter-->
-            <Grid Grid.Row="1">
-                <TextBox x:Name="Search" Margin="10,10,30,10" Text="Filter Applications" Foreground="#FF999999" GotFocus="SearchRemoveText" GotKeyboardFocus="SearchRemoveText" LostFocus="SearchAddText" LostKeyboardFocus="SearchAddText" KeyDown="Search_X" KeyUp="Search_X" MaxLines="1" BorderThickness="1,1,0,1" MouseEnter="Search_X" MouseLeave="Search_X"/>
-                <Button x:Name="ClearSearch" Height="20" Width="20" Margin="0,10,10,10" Background="White" BorderBrush="#FFABADB3" FontFamily="Marlett" Content="" BorderThickness="0,1,1,1" Click="ClearSearch_Click" HorizontalAlignment="Right"/>
-            </Grid>
+            <!--Desc And Info-->
+            <Grid Grid.Column="1">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="40px"/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
 
-            <!--Applications-->
-            <Grid Grid.Row="2">
-                <ListBox HorizontalAlignment="Left" Height="539" VerticalAlignment="Top" Width="200" BorderThickness="0" Background="#00000000">
-                    <ListBoxItem BorderThickness="0" Height="30" FontSize="20" Padding="10, 0">Uno</ListBoxItem>
-                    <ListBoxItem BorderThickness="0" Height="30" FontSize="20" Padding="10, 0">Dux</ListBoxItem>
-                    <ListBoxItem BorderThickness="0" Height="30" FontSize="20" Padding="10, 0">Tri</ListBoxItem>
-                </ListBox>
+                <!--Header-->
+                <Grid Grid.Row="0" Background="#FF2D2D30" MouseDown="DragWindow">
+                    <TextBlock x:Name="HideREADME" HorizontalAlignment="Right" Width="30" MouseDown="HideREADME_Click" Margin="0,15,5,5" Background="#00000000" Foreground="White" MouseEnter="HideREADME_MouseEnter" MouseLeave="HideREADME_MouseLeave">
+                    <Grid>
+                        <Rectangle StrokeThickness="2" Stroke="{Binding Foreground, ElementName=HideREADME}" Margin="0,-13,-30,-7"/>
+                        <Rectangle Fill="{Binding Foreground, ElementName=HideREADME}" Margin="15,-13,-28,-5"/>
+                    </Grid>
+                    </TextBlock>
+                </Grid>
 
-            </Grid>
-        </Grid>
+                <!--Content-->
+                <Grid Grid.Row="1" Background="DarkSlateGray">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition x:Name="READMECol" Width="400" MinWidth="350" MaxWidth="700"/>
+                    </Grid.ColumnDefinitions>
 
-        <!--Desc And Info-->
-        <Grid Grid.Column="1">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="40px"/>
-                <RowDefinition/>
-            </Grid.RowDefinitions>
+                    <GridSplitter Panel.ZIndex="1" Grid.Column="1" Grid.RowSpan="100" HorizontalAlignment="Left" VerticalAlignment="Stretch" Background="#FF2D2D30" Width="3"/>
 
-            <!--Header-->
-            <Grid Grid.Row="0" Background="SlateGray">
+                    <WebBrowser x:Name="README" Grid.Column="1" Margin="3,0,0,0"/>
 
-            </Grid>
-
-            <!--Content-->
-            <Grid Grid.Row="1" Background="DarkSlateGray">
-
+                </Grid>
             </Grid>
         </Grid>
     </Grid>
