--- a/Github Application Updater/Debug Console.xaml
+++ b/Github Application Updater/Debug Console.xaml
@@ -7,6 +7,8 @@
         mc:Ignorable="d"
         Title="Console" Height="350" Width="550" ResizeMode="CanResizeWithGrip" WindowStyle="ToolWindow">
     <Grid>
-        <ItemsControl Name="Console"></ItemsControl>
+        <ScrollViewer x:Name="Viewer">
+            <ItemsControl Name="Console"></ItemsControl>
+        </ScrollViewer>
     </Grid>
 </Window>
