--- a/Github Application Updater/MainWindow.xaml
+++ b/Github Application Updater/MainWindow.xaml
@@ -65,12 +65,12 @@
             </Grid>
 
             <Grid Background="#FF2D2D30" Grid.Row="1" MouseDown="DragWindow">
-                
+
             </Grid>
 
             <Grid Background="White" Grid.Row="2">
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="200px" MinWidth="150px" MaxWidth="270px"/>
+                    <ColumnDefinition Width="250px" MinWidth="150px" MaxWidth="290px"/>
                     <ColumnDefinition Width="*" MinWidth="200px"/>
                 </Grid.ColumnDefinitions>
 
@@ -103,17 +103,17 @@
 
                     <!--Filter-->
                     <Grid Grid.Row="1">
-                        <TextBox x:Name="Search" Margin="10,10,30,10" Text="Filter Applications" Foreground="#FF999999" GotFocus="SearchRemoveText" GotKeyboardFocus="SearchRemoveText" LostFocus="SearchAddText" LostKeyboardFocus="SearchAddText" KeyDown="Search_KeyDown" KeyUp="Search_KeyUp" MaxLines="1" BorderThickness="1,1,0,1" MouseEnter="Search_X" MouseLeave="Search_X"/>
+                        <TextBox x:Name="Search" Margin="10,10,30,10" Text="Filter Applications" Foreground="#FF999999" GotFocus="SearchRemoveText" GotKeyboardFocus="SearchRemoveText" LostFocus="SearchAddText" LostKeyboardFocus="SearchAddText" MaxLines="1" BorderThickness="1,1,0,1" MouseEnter="Search_X" MouseLeave="Search_X" TextChanged="Search_TextChanged"/>
                         <Button x:Name="ClearSearch" Height="20" Width="20" Margin="0,10,10,10" Background="White" BorderBrush="#FFABADB3" FontFamily="Marlett" Content="" BorderThickness="0,1,1,1" Click="ClearSearch_Click" HorizontalAlignment="Right"/>
                     </Grid>
 
                     <!--Applications-->
                     <Grid Grid.Row="2">
-                        <ListBox HorizontalAlignment="Left" Height="526" VerticalAlignment="Top" Width="200" BorderThickness="0" Background="#00000000">
+                        <ListBox x:Name="ApplicationList" BorderThickness="0" Background="#00000000" SelectionChanged="ApplicationList_SelectionChanged">
                             <ListBoxItem BorderThickness="0" Height="30" FontSize="20" Padding="10, 0" IsEnabled="False">No Applications</ListBoxItem>
                             <ListBox.ContextMenu>
                                 <ContextMenu>
-                                    <MenuItem Header="_Reload" Click="Refresh"/>
+                                    <MenuItem Header="_Refresh" Click="Refresh"/>
                                 </ContextMenu>
                             </ListBox.ContextMenu>
                         </ListBox>
@@ -138,7 +138,7 @@
                     </Grid>
 
                     <!--Content-->
-                    <Grid Grid.Row="1" Background="DarkSlateGray" Panel.ZIndex="1">
+                    <Grid Grid.Row="1" Panel.ZIndex="1">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*"/>
                             <ColumnDefinition x:Name="READMECol" Width="400" MinWidth="350" MaxWidth="700"/>
@@ -146,7 +146,50 @@
 
                         <GridSplitter Panel.ZIndex="1" Grid.Column="1" Grid.RowSpan="100" HorizontalAlignment="Left" VerticalAlignment="Stretch" Background="#FF2D2D30" Width="3"/>
 
-                        <WebBrowser x:Name="README" Grid.Column="1" Margin="3,0,0,0"/>
+                        <ScrollViewer Margin="3,0,0,0">
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="Auto"/>
+                                    <ColumnDefinition Width="1*"/>
+                                </Grid.ColumnDefinitions>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="Auto"/>
+                                    <RowDefinition Height="Auto"/>
+                                    <RowDefinition Height="Auto"/>
+                                    <RowDefinition Height="Auto"/>
+                                    <RowDefinition Height="Auto"/>
+                                    <RowDefinition Height="Auto"/>
+                                    <RowDefinition Height="Auto"/>
+                                    <RowDefinition Height="*"/>
+                                </Grid.RowDefinitions>
+
+                                <TextBlock Foreground="Black" FontWeight="Bold" FontSize="15" Grid.Row="0" Margin="10,10,10,0" TextWrapping="Wrap" Text="Description" VerticalAlignment="Top"/>
+                                <TextBlock Foreground="Black" FontSize="15" Grid.Row="1" x:Name="SelectedDescription" Margin="10,0" TextWrapping="Wrap" Text="None Provided" VerticalAlignment="Top" Grid.Column="0" Grid.ColumnSpan="2"/>
+
+                                <TextBlock Foreground="Black" FontWeight="Bold" FontSize="15" Grid.Row="2" Margin="10,10,10,0" TextWrapping="Wrap" Text="Downloaded Version" VerticalAlignment="Top"/>
+                                <TextBlock Foreground="Black" FontSize="15" Grid.Row="2" x:Name="SelectedVersion" Margin="0,10,0,0" TextWrapping="Wrap" Text="None Provided" VerticalAlignment="Top" HorizontalAlignment="Left" Grid.Column="1"/>
+
+                                <TextBlock Foreground="Black" FontWeight="Bold" FontSize="15" Grid.Row="3" Margin="10,10,10,0" TextWrapping="Wrap" Text="Author" VerticalAlignment="Top"/>
+                                <TextBlock Foreground="Black" FontSize="15" Grid.Row="3" x:Name="SelectedAuthor" Margin="0,10,0,0" TextWrapping="Wrap" Text="None Provided" VerticalAlignment="Top" HorizontalAlignment="Left" Grid.Column="1"/>
+
+                                <TextBlock Foreground="Black" FontWeight="Bold" FontSize="15" Grid.Row="4" Margin="10,10,10,0" TextWrapping="Wrap" Text="License" VerticalAlignment="Top"/>
+                                <TextBlock Foreground="Black" FontSize="15" Grid.Row="4" Margin="0,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" HorizontalAlignment="Left" Grid.Column="1">
+                                    <Hyperlink x:Name="SelectedLicense" NavigateUri="https://www.google.com" Click="Link_Click">None Provided</Hyperlink>
+                                </TextBlock>
+
+                                <TextBlock Foreground="Black" FontWeight="Bold" FontSize="15" Grid.Row="5" Margin="10,10,10,0" TextWrapping="Wrap" Text="Last Update" VerticalAlignment="Top"/>
+                                <TextBlock Foreground="Black" FontSize="15" Grid.Row="5" x:Name="SelectedUpdate" Margin="0,10,0,0" TextWrapping="Wrap" Text="None Provided" VerticalAlignment="Top" HorizontalAlignment="Left" Grid.Column="1"/>
+
+                                <TextBlock Foreground="Black" FontWeight="Bold" FontSize="15" Grid.Row="6" Margin="10,10,10,0" TextWrapping="Wrap" Text="Project URL" VerticalAlignment="Top"/>
+                                <TextBlock Foreground="Black" FontSize="15" Grid.Row="6" Margin="0,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" HorizontalAlignment="Left" Grid.Column="1">
+                                    <Hyperlink x:Name="SelectedURL" NavigateUri="https://www.google.com" Click="Link_Click">None Provided</Hyperlink>
+                                </TextBlock>
+
+                            </Grid>
+                        </ScrollViewer>
+
+
+                        <WebBrowser x:Name="README" Grid.Column="1" Margin="3,0,0,0" Navigating="NoNav"/>
 
                     </Grid>
                 </Grid>
